--- a/AdventOfCode/AdventOfCode2021/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode/AdventOfCode2021/AdventOfCode2021/AdventOfCode2021.csproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Inputs\07.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Inputs\06.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
