--- a/AdventOfCode/AdventOfCodeBase/AdventOfCodeBase.csproj
+++ b/AdventOfCode/AdventOfCodeBase/AdventOfCodeBase.csproj
@@ -2,11 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AdventOfCode2021\AdventOfCode2021\AdventOfCode2021.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\AdventOfCode.Shared\AdventOfCode.Shared.csproj" />
+    <ProjectReference Include="..\AdventOfCode2022\AdventOfCode2022\AdventOfCode2022\AdventOfCode2022.csproj" />
   </ItemGroup>
 
 </Project>
