--- a/AdventOfCode/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022/AdventOfCode2022.csproj
@@ -14,9 +14,21 @@
     <None Remove="Inputs\Day05.txt" />
     <None Remove="Inputs\Day06.txt" />
     <None Remove="Inputs\Day07.txt" />
+    <None Remove="Inputs\Day08.txt" />
+    <None Remove="Inputs\Day09.txt" />
+    <None Remove="Inputs\Day10.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Inputs\Day10.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Inputs\Day09.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Inputs\Day08.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Inputs\Day07.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
